@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: October 24, 2008</p>
+      <p>Last Updated: October 25, 2008</p>
     </td>
   </tr>
 </table>
@@ -1142,6 +1142,10 @@ nuttx-0.3.17 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Fixed a bug in the LPC214x USB driver: It was not properly clearing a HALTed
 	  endpoints (other than EP) on receipt of CLEAR FEATURES request.
 	* Added USB storage class device side driver (BBB)
+	* Fixed a bug in the LPC214x USB driver: It was not properly handling request buffers
+	  larger then the endpoint's max packet (DM320 driver also fixed, untested)
+	* Added logic to the USB device interface:  A bit is needed to force the driver to
+	  to terminate an IN transfer with a short packet (zero-length if necessary).
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
